Adicionando logo, descrição e atualizando formatação.

--- a/Home.html
+++ b/Home.html
@@ -8,12 +8,32 @@
 </head>
 <body>
     <header>
-        <h1>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="Portfolio.html">Portfolio</a></li>
-            <li><a href="About.html">About</a></li>
-        </h1>
+        <h1>Portfolio</h1>
+        <h1> <img src="logoport.png"> </h1>
+        <nav>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="About.html">About</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <main>
+
+        <h2>Sobre mim</h2>
+
+        <p>Sejam bem vindos, sou Mauricio, desenvolvedor Back-End focado em WEB.</p>
+
+        <p>Apaixonado por programação e desafios, busco diariamente novos conhecimentos e soluções.</p>
+
+        <p>Desenvolvi esse site do zero utilizando, HTML5, CSS3 e JavaScript, para utilizar como vitrine dos meus trabalhos e para que possam me conhecer melhor, além de ter acesso aos meus contatos.</strong></p>
+
+
+
+        <h2>Meus Trabalhos</h2>
+
+    </main>
     
 </body>
 </html>
