Adicionando contatos, links.

--- a/Home.html
+++ b/Home.html
@@ -31,10 +31,12 @@
         
         <h4>Contatos</h4>
 
+            <li><a href="mailto:ma-uh@hotmail.com">ma-uh@hotmail.com</a></li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/mauricio-pacheco1991/">Linkedin</a></li>
+            <li><a target="_blank" href="https://github.com/devmauricio1991">Github</a></li>
 
-        <h2>Meus Trabalhos</h2>
 
-
+        <h2>Trabalhos</h2>
 
     </main>
 
