--- a/Home.html
+++ b/Home.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
     <header>
         <h1 class="titulo">Portfolio</h1>
-        <h1> <img src="logoport.png"> </h1>
+        <img class="foto" src="logoport.png" alt="Foto Mauricio">
         <nav>
             <ul>
                 <li><a href="Home.html">Home</a></li>
