Commitando as ultimas modificações teste.

--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">Portfolio</h1>
+        <h1 class="titulo">Meu ortfolio</h1>
         <img class="foto" src="logoport.png" alt="Foto Mauricio">
         <nav>
             <ul>
